[gd_scene load_steps=3 format=3 uid="uid://cicocidwwrubl"]

[ext_resource type="Script" uid="uid://cy48vb2jop62e" path="res://Resources/UI/DialogueUI.gd" id="1_semyr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DialogueUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_semyr")

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = -220.0
offset_right = -140.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 22
text = "Character Name"

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Portrait" type="TextureRect" parent="DialoguePanel/MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
stretch_mode = 5

[node name="DialogueLabel" type="RichTextLabel" parent="DialoguePanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "This is where the dialogue text will appear. It will animate character by character."
fit_content = true
scroll_active = false

[node name="ContinueIndicator" type="Label" parent="DialoguePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "â–¼ Press [Space] or [E] to continue"
horizontal_alignment = 1
